# location_recommending_system

./: README.MD  deploy.bash  docker-compose.yaml  docker-compose.yml  getExecutorShell.bash  hadoop.env  prepare.bash
base/: .gitignore  Dockerfile  entrypoint.sh
data_collection_stack/: .dockerignore  deploy.bash  docker-compose.yaml
data_collection_stack/api/: .env  Dockerfile  entrypoint.sh  main.py  pyproject.toml
data_collection_stack/api/database/: __ctl.py  __init__.py  models.py  repository.py  schemas.py
data_collection_stack/postgres/: .dockerignore  Dockerfile  enable-plpython3.sh  enable-postgis.sh  postgresql.conf
data_collector/: README.md  analysis_options.yaml  pubspec.yaml
data_collector/android/app/: build.gradle
data_collector/android/app/src/debug/: AndroidManifest.xml
data_collector/android/app/src/main/: AndroidManifest.xml
data_collector/android/app/src/main/kotlin/com/example/data_collector/: BackgroundExecutorService.kt  BootReceiver.kt  MainActivity.kt
data_collector/android/app/src/main/res/values/: ic_launcher_background.xml
data_collector/lib/: environment.dart  main.dart
data_collector/lib/cubit/: apistatus_cubit.dart  apistatus_state.dart  recomendationapi_cubit.dart  recomendationapi_state.dart
data_collector/lib/router/: AppRouter.dart  Router.dart
data_collector/lib/screens/: DebugPage.dart  Error.dart  HomePage.dart  RecommendationPage.dart
data_collector/lib/service_context/: main.dart  util.dart
data_collector/lib/util/: PlatformComms.dart  PositionToWKT.dart
datanode/: Dockerfile  execute.bash
executor/: .dockerignore  Dockerfile  execute.bash
executor/package/: .gitignore  prepopulateHDFS.bash  pyproject.toml  uploadMapped.bash
executor/package/asda/: part-00000-4800e12a-9937-457d-8dd1-cb2bdb12d009-c000.json
executor/package/executor/: get_data_from_pg.py  playground.py  prepareData.py  run.py
executor/package/executor/scripts/: build_als.py  collect_jars.py  get_data_from_pg.py  get_repl.py  prepopulate_hdfs.py  preprocess_data.py
hadoop_stack/: README.MD  bde2020-license  deploy.bash  docker-compose.yml  getExecutorShell.bash  prepare.bash
hadoop_stack/base/: Dockerfile  entrypoint.sh
hadoop_stack/datanode/: Dockerfile
hadoop_stack/executor/: Dockerfile
hadoop_stack/executor/package/: .gitignore  prepopulateHDFS.bash  pyproject.toml
hadoop_stack/executor/package/executor/: playground.py  udf.py
hadoop_stack/executor/package/executor/scripts/: build_als.py  get_data_from_pg.py  get_repl.py  preprocess_data.py
hadoop_stack/historyserver/: Dockerfile
hadoop_stack/namenode/: Dockerfile
hadoop_stack/nodemanager/: Dockerfile
hadoop_stack/recommender_api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
hadoop_stack/recommender_api/recommender_api/: api.py  spark.py
hadoop_stack/resourcemanager/: Dockerfile
historyserver/: Dockerfile
namenode/: Dockerfile  execute.bash
nodemanager/: Dockerfile
resourcemanager/: Dockerfile
