[tool.poetry]
name = "executor"
version = "0.1.0"
description = ""
authors = ["Paweł Pankiewicz <239565@edu.p.lodz.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.2.1"
platformdirs = "^2.5.1"
apache-sedona = "^1.1.1"
hdfs = "^2.7.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[tool.poetry.scripts]
hdfs_jars="executor.scripts.prepopulate_hdfs:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
