[tool.poetry]
name = "executor"
version = "0.1.0"
description = ""
authors = ["Paweł Pankiewicz <239565@edu.p.lodz.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.2.1"
platformdirs = "^2.5.1"
hdfs = "^2.7.0"
ptpython = "^3.0.20"
geomesa-pyspark = {path = "../geomesa_pyspark-3.4.0.tar.gz"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[tool.poetry.scripts]
collect_jars="executor.scripts.collect_jars:run"
pyspark_shell="executor.scripts.get_repl:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
