[tool.poetry]
name = "executor"
version = "0.1.0"
description = ""
authors = ["Paweł Pankiewicz <239565@edu.p.lodz.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.2.1"
platformdirs = "^2.5.1"
ptpython = "^3.0.20"
Shapely = "^1.8.1"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.36"
pandas = "^1.4.2"
geographiclib = "^2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
# geomesa is in dev only to fix build errors in dockerfile, otherwise pip fails to install
geomesa-pyspark = { path = "geomesa_pyspark-3.4.0.tar.gz" }

[tool.poetry.scripts]
pyspark_shell = "executor.scripts.get_repl:repl"
get_test_data = "executor.scripts.get_data_from_pg:run"
preprocess_data = "executor.scripts.preprocess_data:run"
build_als = "executor.scripts.build_als:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
